--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -5,50 +5,17 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
-.swiper-container {
-  width: 600px;
-  height: 300px;
-}
-
 /*********************************************/
-.swiper-container {
-  width: 100%;
-  height: 100%;
+.slick-dots{
+  bottom: 0;
 }
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+.slick-dotted.slick-slider{
+  margin-bottom: 0;
 }
-
-.swiper-pagination-bullet {
-  background-color: #f7f7f7 !important;
-  border: 2px solid #a9afb3 !important;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: #a9afb3 !important;
-}
-
-.swiper-container-horizontal > .swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
-  bottom: 51px !important;
-}
-
+/*.slick-slider .slick-track, .slick-slider .slick-list{
+  transform: none!important;
+  width: max-content!important;
+}*/
 /*********************************************/
 .flex-column {
   display: flex;
@@ -110,7 +77,7 @@ html, body {
 
 main {
   font-family: $Lato;
-  .title-text {
+  .info {
     text-align: center;
     color: #353738;
     font-family: $Lato;
@@ -164,7 +131,7 @@ main {
         display: flex;
         flex-direction: column;
         width: 30%;
-        .title-text {
+        .info {
           padding: 65px;
           position: relative;
 
@@ -208,10 +175,8 @@ main {
     }
   }
   .contact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
+    overflow: hidden;
     .carousel-indicators li {
       background-color: white;
       width: 10px;
@@ -222,7 +187,10 @@ main {
     .carousel-indicators .active {
       background-color: #a9afb3;
     }
-    .title-text {
+    .info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 127px 125px;
       h3 {
         text-transform: none;
@@ -233,11 +201,13 @@ main {
       }
     }
     ul {
-      display: flex;
       li {
-        background-color: red;
-        button {
-          display: none !important;
+
+        color: #a9afb3;
+        border-radius: 50%;
+        button{
+          width: 10px;
+          height: 10px;
         }
       }
     }
@@ -407,7 +377,7 @@ footer {
   }
   main {
     .contact {
-      .title-text {
+      .info {
         padding: 127px 125px;
       }
     }
@@ -426,7 +396,7 @@ footer {
     .row {
       overflow: hidden;
       .flex-column {
-        .title-text {
+        .info {
 
           p {
             padding: 45px !important;
@@ -634,7 +604,7 @@ footer {
           width: 100% !important;
         }
         .flex-column {
-          .title-text p {
+          .info p {
             padding: 0 0 45px 0 !important
 
           }
